# real-time-meeting-translator

./: .gitignore  Cargo.toml  README.md  build.sh  config.toml
.cargo/: config.toml
crates/audio/: Cargo.toml
crates/audio/src/: audio_switch.rs  capture.rs  denoise.rs  device.rs  ducking.rs  lib.rs  loopback.rs  phrase_segmenter.rs  playback.rs  recorder.rs  resampler.rs  silero_vad.rs  vad.rs
crates/diarization/: Cargo.toml
crates/diarization/src/: lib.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs  v2.rs
crates/sbd/: Cargo.toml
crates/sbd/src/: lib.rs
crates/separation/: Cargo.toml
crates/separation/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: audio.rs  config.rs  language.rs  lib.rs  metrics.rs  pipeline.rs  python.rs
crates/stt/: Cargo.toml
crates/stt/src/: lib.rs  streaming.rs
crates/translation/: Cargo.toml
crates/translation/src/: lib.rs
crates/tts/: Cargo.toml
crates/tts/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: combined_window.rs  lib.rs  settings_window.rs  subtitle_overlay.rs
crates/voice_convert/: Cargo.toml
crates/voice_convert/src/: lib.rs
docs/: IMPLEMENTATION-PLAN.md  PRD.md  SOLUTION_OVERVIEW.md  pipeline-architecture.md  pipeline_factories.excalidraw
docs/adr/: 0001-ctranslate2-translation.md  0002-audio-ducking-wasapi.md  0003-cosyvoice-tts.md  0004-streaming-stt-local-agreement.md  0005-ecapa-tdnn-diarization.md  0006-piper-pitch-shift-tts.md  0007-sepformer-source-separation.md  0008-silero-vad.md  0009-qwen-streaming-translation.md  0010-kokoro-tts.md  0011-openvoice-tone-color-conversion.md  0012-sepformer-permutation-tracking.md  0013-hybrid-sliding-window-pipeline.md  0014-xtts-voice-cloning-tts.md  0015-streaming-stt-inside-phrase-window.md  0016-translation-context-window.md
installer/: build-installer.ps1  default-config.toml  run-setup.bat  setup-dependencies.ps1
scripts/: audio_switch.ps1  diarization_bridge.py  install.ps1  requirements.txt  sbd_bridge.py  separation_bridge.py  setup.bat  stt_bridge.py  test_sbd_bridge.py  test_stt.py  test_translation_bridge.py  translation_bridge.py  tts_bridge.py  uninstall.ps1  voice_convert_bridge.py  xtts_bridge.py
src/: main.rs
wix/: License.rtf  main.wxs
