[workspace]
members = [
    "crates/shared",
    "crates/audio",
    "crates/stt",
    "crates/translation",
    "crates/tts",
    "crates/pipeline",
    "crates/ui",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

[package]
name = "meeting-translator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "meeting-translator"
path = "src/main.rs"

[dependencies]
shared = { path = "crates/shared" }
pipeline = { path = "crates/pipeline" }
ui = { path = "crates/ui" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
