[workspace]
members = [
    "crates/shared",
    "crates/audio",
    "crates/stt",
    "crates/translation",
    "crates/tts",
    "crates/pipeline",
    "crates/ui",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
anyhow = "1"

[package]
name = "meeting-translator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "meeting-translator"
path = "src/main.rs"

[dependencies]
shared = { path = "crates/shared" }
pipeline = { path = "crates/pipeline" }
ui = { path = "crates/ui" }
audio = { path = "crates/audio" }
stt = { path = "crates/stt" }
translation = { path = "crates/translation" }
tts = { path = "crates/tts" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
cpal = "0.15"

[features]
default = ["cuda"]
cuda = ["stt/cuda"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
