[package]
name = "audio"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
cpal = "0.15"
rubato = "0.16"
nnnoiseless = { version = "0.5", default-features = false }
