[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
audio = { path = "../audio" }
stt = { path = "../stt" }
translation = { path = "../translation" }
tts = { path = "../tts" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
