[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tray-icon = "0.19"
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "glow"] }
winit = "0.30"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
